--- a/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/src/app/clientes/clientes-form/clientes-form.component.html
@@ -10,14 +10,14 @@
                 <div class="form-group">
                     <label>ID:</label>
                     <!--o form control vai deixar o campo resposivo e vai se adaptar ao tamanho da tela-->
-                    <input type="text" class="form-control"  disabled="true">
+                    <input type="text" class="form-control"  disabled="true" name="id" [ngModel]="cliente.id">
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="form-group">
                     <label>Data Cadastro:</label>
-                    <input type="text" class="form-control" disabled="true">
+                    <input type="text" class="form-control" disabled="true" name="dataCadastro" [ngModel]="cliente.dataCadastro" >
                 </div>
             </div>
 
@@ -26,21 +26,21 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label>Nome: *</label>
-                    
-                    <input type="text" class="form-control">
+                                                            <!-- [{}] to way data bind -->
+                    <input type="text" class="form-control" [(ngModel)] = "cliente.nome" name="nome">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label>CPF: *</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" [(ngModel)] = "cliente.cpf" name="cpf">
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-2">
-                <button type="submit" class="btn btn-success">
+                <button type="submit" class="btn btn-success" (click)="clicar()">
                     <i class="fa fa-save"></i> Salvar
                 </button>
             </div>
