--- a/src/app/clientes/clientes-lista/clientes-lista.component.html
+++ b/src/app/clientes/clientes-lista/clientes-lista.component.html
@@ -34,6 +34,10 @@
                             <button class="btn btn-primary" routerLink="/clientes-form/{{cliente.id}}">
                                 <i class="fa fa-edit"></i>
                             </button>
+
+                            <button class="btn btn-danger" (click)="preparaDelecao(cliente)" data-toggle="modal" data-target="#modalDelecao">
+                                <i class="fa fa-trash"></i>
+                            </button>
                         </td>
                     </tr>
 
@@ -42,4 +46,25 @@
 
         </div>
     </div>
+
+    <div id="modalDelecao" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4>Confirma</h4>
+                </div>
+
+                <!--Se o cliente selecionado não for nulo, vai aparecer ali-->
+                <div class="modal-body" *ngIf="clienteSelecionado">
+                    Confirma a deleção do(a) Clinte {{clienteSelecionado.nome}}?
+                </div>
+
+                <div class="modal-footer">
+                    <button class="btn btn-success">Confirma</button>
+                    <button class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
