--- a/src/app/clientes/clientes-lista/clientes-lista.component.html
+++ b/src/app/clientes/clientes-lista/clientes-lista.component.html
@@ -4,6 +4,17 @@
 </ol>
 <div class="container">
     <div class="row">
+        <div class="col-md-12">
+            <div class="alert alert-success" role="alert" *ngIf="mensagemSucesso">
+                {{mensagemSucesso}}
+              </div>
+              <div class="alert alert-danger" role="alert" *ngIf="mensagemErro">
+                {{mensagemErro}}
+              </div>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-md-2">
             <button class="btn btn-warning" (click)="novoCadastro()">
                 <i class="fa fa-plus"></i>Novo
@@ -60,7 +71,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button class="btn btn-success">Confirma</button>
+                    <button class="btn btn-success" (click)="deletarCliente()" data-dismiss="modal">Confirma</button>
                     <button class="btn btn-default" data-dismiss="modal">Cancelar</button>
                 </div>
             </div>
