--- a/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -1,21 +1,70 @@
-<h1 class="mt-4">ServViço Prestado</h1>
+<h1 class="mt-4">Serviço Prestado</h1>
 <ol class="breadcrumb mb-4">
-   <li class="breadcrum-bitem active">Novo</li>
+    <li class="breadcrum-bitem active">Novo</li>
 </ol>
 <div class="container">
-    <form #form="ngForm" (submit)="onSubmit()">
+    <form #form="ngForm" (submit)="onSubmit()" >
+
+        
         
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group">
-                     <label>Cliente: </label>
-                     <select class="form-control">
-                        <option value="">Selecione</option>
-                        <option *ngFor="let cliente of clientes" [ngValue]="cliente.id">
-                            {{cliente.nome}}
+                    <label>Cliente: </label>
+                    <select class="form-control" 
+                            [ngModelOptions]="{standalone: true}"
+                            [(ngModel)]="servico.idCliente">
+                        <option value="">Selecione...</option>
+                        <option *ngFor="let cliente of clientes" 
+                                [ngValue]="cliente.id">
+                            {{ cliente.nome }}
                         </option>
-                     </select>
+                    </select>
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label>Descrição:</label>
+                    <input class="form-control" 
+                            [(ngModel)]="servico.descricao" type="text" 
+                            name="descricao" id="inputDescricao">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Data:</label>
+                    <input class="form-control" 
+                            [(ngModel)]="servico.data" type="text" 
+                            name="data" id="inputData">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Preço:</label>
+                    <input class="form-control" 
+                            [(ngModel)]="servico.preco" type="text" 
+                            name="preco" id="inputPreco">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3">
+                <button type="submit" class="btn btn-success">
+                    <i class="fa fa-save"></i>
+                    Salvar
+                </button>
+
+                <button type="button" routerLink="/servicos-prestados/lista" 
+                        class="btn btn-danger ml-1" >
+                    <i class="fa fa-arrow-alt-circle-left" ></i> Voltar
+                </button>
             </div>
         </div>
 
