--- a/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
+++ b/src/app/servico-prestado/servico-prestado-lista/servico-prestado-lista.component.html
@@ -34,4 +34,32 @@
         </div>    
 
     </form>
+
+    <br/>
+    <div class="row">
+        <div class="alert alert-warning" role="alert" *ngIf="message">
+            {{message}}
+          </div>
+        <div class="col-md-12">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Cliente</th>
+                        <th>Descrição</th>
+                        <th>Preço</th>
+                        <th>Data</th>
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let s of lista">
+                        <td>{{s.cliente.nome}}</td>
+                        <td>{{s.descricao}}</td>
+                        <td>{{s.valor}}</td>
+                        <td>{{s.data}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
