add o botao novo nos formularios de listagem e navagando por eles

--- a/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -70,9 +70,9 @@
                     Salvar
                 </button>
 
-                <button type="button" routerLink="/servicos-prestados/lista" 
-                        class="btn btn-danger ml-1" >
-                    <i class="fa fa-arrow-alt-circle-left" ></i> Voltar
+
+                <button type="button" routerLink="/servico-prestado-listagem" class="btn btn-danger ml-1">
+                    <i class="fa fa-arrow-alt-circle-left"></i> Voltar
                 </button>
             </div>
         </div>
