--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,9 +12,14 @@
                                </div>
 
                                <div class="card-body">
-                                <div class="alert alert-danger" *ngIf="loginError">
-                                     Login e/ou Senha incorreto(a).
+                                
+                                <div class="alert alert-success" *ngIf="mensagemSucesso">
+                                     {{mensagemSucesso}}
                                 </div>
+
+                                <div class="alert alert-danger" *ngIf="loginError">
+                                    Login e/ou Senha incorreto(a).
+                               </div>
 
                                 <form #loginForm="ngForm" (submit)="onSubmit();">
                                     <div class="form-group">
@@ -41,7 +46,7 @@
                                         </button>
 
                                         <button type="button" class="btn btn-success" 
-                                                (click)="onSubmit()"
+                                                (click)="cadastrar()"
                                                 *ngIf="cadastrando">
                                             Cadastrar
                                         </button>
