finalizando o cadastro de usuario

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,8 +17,8 @@
                                      {{mensagemSucesso}}
                                 </div>
 
-                                <div class="alert alert-danger" *ngIf="loginError">
-                                    Login e/ou Senha incorreto(a).
+                                <div class="alert alert-danger" *ngFor="let erro of errors">
+                                    {{erro}}
                                </div>
 
                                 <form #loginForm="ngForm" (submit)="onSubmit();">
